# QABuilder

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.json  qabuilder.sql
src/: main.cpp
src/controllers/: api_login.cc  api_login.h  api_question.cc  api_question.h  api_user.cc  api_user.h
src/db/: Books.cc  Books.h  Chapters.cc  Chapters.h  Qa.cc  Qa.h  Users.cc  Users.h  model.json
src/filters/: adminFilter.cc  adminFilter.h  loginFilter.cc  loginFilter.h
src/utils/: utils.cpp  utils.hpp
